--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "verify:groq": "node scripts/verify-groq.mjs"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
