--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,12 @@
+# Include any files or directories that you don't want to be copied to your
+# container here (e.g., local build artifacts, temporary files, etc.).
+#
+# For more help, visit the .dockerignore file reference guide at
+# https://docs.docker.com/go/build-context-dockerignore/
+
+**/.DS_Store
+**/__pycache__
+**/.venv
 **/.classpath
 **/.dockerignore
 **/.env
@@ -11,9 +20,10 @@
 **/*.*proj.user
 **/*.dbmdl
 **/*.jfm
+**/bin
 **/charts
 **/docker-compose*
-**/compose*
+**/compose.y*ml
 **/Dockerfile*
 **/node_modules
 **/npm-debug.log
