--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:install": "playwright install --with-deps",
+    "test:e2e:deps": "bash scripts/install-playwright-deps.sh",
     "verify:groq": "node scripts/verify-groq.mjs"
   },
   "dependencies": {
