--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -8,3 +8,14 @@ verify_jwt = false
 
 [functions.world-generator]
 verify_jwt = false
+
+[functions.dm]
+enabled = true
+verify_jwt = true
+import_map = "./functions/dm/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/dm/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/dm/*.html" ]
