--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@ node_modules
 dist
 dist-ssr
 *.local
+playwright-report/
+test-results/
+output/playwright/
 
 # Editor directories and files
 .vscode/*
