chore: untrack .env + support functions base URL override

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 GROQ_API_KEY=
 VITE_SUPABASE_URL=
 VITE_SUPABASE_ANON_KEY=
+# Optional: override Edge Functions base URL (must include /functions/v1).
+VITE_MYTHIC_FUNCTIONS_BASE_URL=
 NEXT_PUBLIC_SUPABASE_URL=
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
