--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ dist-ssr
 # Supabase local temp
 supabase/.temp/
 .vercel
+.env
 .env*.local
 
 # Playwright CLI snapshots generated during smoke runs
