Harden Mythic once-over

--- a/services/mythic-api/.env.example
+++ b/services/mythic-api/.env.example
@@ -1,7 +1,7 @@
 PORT=3001
 HOST=0.0.0.0
 LOG_LEVEL=info
-MYTHIC_ALLOWED_ORIGINS=http://localhost:8080,https://mythweaver.online
+MYTHIC_ALLOWED_ORIGINS=https://mythweaver.online,https://www.mythweaver.online,http://localhost:8080,http://127.0.0.1:8080,http://localhost:4173,http://127.0.0.1:4173,http://localhost:3000,http://127.0.0.1:3000
 GLOBAL_RATE_LIMIT_MAX=240
 GLOBAL_RATE_LIMIT_WINDOW_MS=60000
 
