--- a/services/mythic-api/package.json
+++ b/services/mythic-api/package.json
@@ -20,5 +20,8 @@
     "@types/node": "^22.16.5",
     "tsup": "^8.5.0",
     "typescript": "^5.8.3"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-musl": "4.57.1"
   }
 }
