--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ dist-ssr
 supabase/.temp/
 .vercel
 .env*.local
+services/mythic-api/.env
 
 # Playwright CLI snapshots generated during smoke runs
 .playwright-cli/page-*.yml
