--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "preview": "vite preview",
     "test:e2e": "playwright test",
     "smoke:prod": "playwright test tests/prod-smoke.spec.ts",
+    "smoke:board": "bash scripts/smoke-mythic-board-auth.sh",
     "test:e2e:headed": "playwright test --headed",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:install": "playwright install --with-deps",
