--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ VITE_SUPABASE_URL=
 VITE_SUPABASE_ANON_KEY=
 VITE_SUPABASE_PUBLISHABLE_KEY=
 VITE_MYTHIC_FUNCTIONS_BASE_URL=
+VITE_MYTHIC_DEV_SURFACES=false
 NEXT_PUBLIC_SUPABASE_URL=
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
 NEXT_PUBLIC_SUPABASE_PUBLISHABLE_KEY=
