--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test:e2e": "playwright test",
     "smoke:prod": "playwright test tests/prod-smoke.spec.ts",
     "smoke:board": "bash scripts/smoke-mythic-board-auth.sh",
+    "vm:deploy:guard": "bash scripts/vm-deploy-guard.sh",
     "test:e2e:headed": "playwright test --headed",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:install": "playwright install --with-deps",
