Implement RPG math progression

--- a/services/mythic-api/package.json
+++ b/services/mythic-api/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsup src/server.ts --format esm --platform node --target node20 --sourcemap --clean --out-dir dist",
     "start": "node dist/server.js",
-    "check": "tsc --noEmit"
+    "check": "tsc --noEmit",
+    "test:worldforge": "tsx --test src/lib/worldforge/worldforge.test.ts"
   },
   "dependencies": {
     "@fastify/cors": "^11.1.0",
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.16.5",
+    "tsx": "^4.21.0",
     "tsup": "^8.5.0",
     "typescript": "^5.8.3"
   },
