Implement Mythic board cutover

--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "typecheck": "tsc -b",
     "preview": "vite preview",
     "test:e2e": "playwright test",
+    "test:balance:gate": "playwright test tests/sim/balance.sim.test.ts --reporter=line",
     "smoke:prod": "playwright test tests/prod-smoke.spec.ts",
     "smoke:board": "bash scripts/smoke-mythic-board-auth.sh",
+    "worldforge:backfill": "npx tsx scripts/backfill-worldforge-profiles.ts",
     "vm:deploy:guard": "bash scripts/vm-deploy-guard.sh",
     "test:e2e:headed": "playwright test --headed",
     "test:e2e:ui": "playwright test --ui",
