--- a/services/mythic-api/.env.example
+++ b/services/mythic-api/.env.example
@@ -9,6 +9,7 @@ SUPABASE_URL=https://<project-ref>.supabase.co
 SUPABASE_PROJECT_REF=<project-ref>
 SUPABASE_SERVICE_ROLE_KEY=<service-role-key>
 MYTHIC_TURN_SALT=<turn-salt>
+DM_NARRATOR_MODE=hybrid
 
 OPENAI_API_KEY=<openai-key>
 OPENAI_BASE_URL=https://api.openai.com
