--- a/apps/SagaSparkPad/Config/SagaSparkPad.xcconfig
+++ b/apps/SagaSparkPad/Config/SagaSparkPad.xcconfig
@@ -8,5 +8,6 @@ DEFAULT_CAMPAIGN_ID = saga-spark-ipad
 LEVELUPKIT_ENABLE_DEV_QUICKSTART = YES
 LEVELUPKIT_FORCE_DEV_QUICKSTART = NO
 LEVELUPKIT_ENABLE_ANONYMOUS_AUTH = YES
+APP_ENV = dev
 
 #include? "SagaSparkPad.local.xcconfig"
