--- a/apps/SagaSparkPad/project.yml
+++ b/apps/SagaSparkPad/project.yml
@@ -30,6 +30,7 @@ targets:
         LEVELUPKIT_ENABLE_DEV_QUICKSTART: $(LEVELUPKIT_ENABLE_DEV_QUICKSTART)
         LEVELUPKIT_FORCE_DEV_QUICKSTART: $(LEVELUPKIT_FORCE_DEV_QUICKSTART)
         LEVELUPKIT_ENABLE_ANONYMOUS_AUTH: $(LEVELUPKIT_ENABLE_ANONYMOUS_AUTH)
+        APP_ENV: $(APP_ENV)
         SUPABASE_ANON_KEY: $(SUPABASE_ANON_KEY)
         SUPABASE_REDIRECT_URL: $(SUPABASE_REDIRECT_URL)
         SUPABASE_URL: $(SUPABASE_URL)
@@ -62,10 +63,12 @@ targets:
           LEVELUPKIT_ENABLE_DEV_QUICKSTART: YES
           LEVELUPKIT_FORCE_DEV_QUICKSTART: NO
           LEVELUPKIT_ENABLE_ANONYMOUS_AUTH: YES
+          APP_ENV: dev
         Release:
           LEVELUPKIT_ENABLE_DEV_QUICKSTART: NO
           LEVELUPKIT_FORCE_DEV_QUICKSTART: NO
           LEVELUPKIT_ENABLE_ANONYMOUS_AUTH: YES
+          APP_ENV: prod
 schemes:
   "SagaSparkPad":
     build:
