--- a/services/mythic-api/.env.example
+++ b/services/mythic-api/.env.example
@@ -11,6 +11,13 @@ SUPABASE_SERVICE_ROLE_KEY=<service-role-key>
 MYTHIC_TURN_SALT=<turn-salt>
 DM_NARRATOR_MODE=hybrid
 
+# OpenAI-compatible provider settings.
+# Supports both:
+# - OPENAI_BASE_URL=http://127.0.0.1:1234
+# - OPENAI_BASE_URL=http://127.0.0.1:1234/v1
+#
+# OPENAI_API_KEY is required for non-local hosts.
+# For local loopback hosts (LM Studio / Studio Light), key may be omitted.
 OPENAI_API_KEY=<openai-key>
 OPENAI_BASE_URL=https://api.openai.com
 OPENAI_CHAT_TIMEOUT_MS=45000
@@ -18,3 +25,7 @@ OPENAI_TTS_TIMEOUT_MS=30000
 OPENAI_MODEL=gpt-4o-mini
 OPENAI_TTS_MODEL=gpt-4o-mini-tts
 OPENAI_TTS_VOICE=nova
+
+# Local LM Studio example:
+# OPENAI_BASE_URL=http://127.0.0.1:1234
+# OPENAI_MODEL=<your-local-model>
