--- a/services/mythic-api/.env.example
+++ b/services/mythic-api/.env.example
@@ -1,7 +1,7 @@
 PORT=3001
 HOST=0.0.0.0
 LOG_LEVEL=info
-MYTHIC_ALLOWED_ORIGINS=https://mythweaver.online,https://www.mythweaver.online,http://localhost:8080,http://127.0.0.1:8080,http://localhost:4173,http://127.0.0.1:4173,http://localhost:3000,http://127.0.0.1:3000
+MYTHIC_ALLOWED_ORIGINS=http://localhost:8080,http://127.0.0.1:8080,https://app.example.com,https://*.ts.net
 GLOBAL_RATE_LIMIT_MAX=240
 GLOBAL_RATE_LIMIT_WINDOW_MS=60000
 
@@ -11,8 +11,13 @@ SUPABASE_SERVICE_ROLE_KEY=<service-role-key>
 MYTHIC_TURN_SALT=<turn-salt>
 DM_NARRATOR_MODE=hybrid
 
-OPENAI_API_KEY=<openai-key>
+OPENAI_API_KEY=<openai-key-or-empty-for-local-gateway>
 OPENAI_BASE_URL=https://api.openai.com
+# Optional aliases for Tailscale/local OpenAI-compatible gateways.
+TAILSCALE_AI_BASE_URL=
+TAILSCALE_OPENAI_BASE_URL=
+TAILSCALE_OPENAI_API_KEY=
+
 OPENAI_CHAT_TIMEOUT_MS=45000
 OPENAI_TTS_TIMEOUT_MS=30000
 OPENAI_MODEL=gpt-4o-mini
