--- a/services/mythic-api/package.json
+++ b/services/mythic-api/package.json
@@ -9,7 +9,8 @@
     "check": "tsc --noEmit",
     "test:narrator-smoke": "tsx scripts/narrator-smoke-test.ts",
     "test:worldforge": "tsx --test src/lib/worldforge/worldforge.test.ts",
-    "test:worldforge:contracts": "tsx --test src/lib/worldforge/worldforge.contracts.test.ts"
+    "test:worldforge:contracts": "tsx --test src/lib/worldforge/worldforge.contracts.test.ts",
+    "start:keychain": "bash ../../scripts/start-mythic-api-keychain.sh"
   },
   "dependencies": {
     "@fastify/cors": "^11.1.0",
