--- a/services/mythic-api/.env.example
+++ b/services/mythic-api/.env.example
@@ -12,11 +12,15 @@ MYTHIC_TURN_SALT=<turn-salt>
 DM_NARRATOR_MODE=hybrid
 
 OPENAI_API_KEY=<openai-key-or-empty-for-local-gateway>
+# Optional file-based key path (recommended for production VM).
+OPENAI_API_KEY_FILE=
 OPENAI_BASE_URL=https://api.openai.com
 # Optional aliases for Tailscale/local OpenAI-compatible gateways.
 TAILSCALE_AI_BASE_URL=
 TAILSCALE_OPENAI_BASE_URL=
 TAILSCALE_OPENAI_API_KEY=
+TAILSCALE_OPENAI_API_KEY_FILE=
+LLM_API_KEY_FILE=
 
 OPENAI_CHAT_TIMEOUT_MS=45000
 OPENAI_TTS_TIMEOUT_MS=30000
